--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@ body {
   margin: 0;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+}
+
 .band {
   height    : 100vh;
   text-align: center;
@@ -12,25 +19,96 @@ body {
   color           : #ea3aa7;
 }
 
+
+
 .light {
   background-color: #fff;
   color #333;
 }
 
 .cover {
-    background             : url("img/loverboys-neon-cover.jpg") no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size   : cover;
-    -o-background-size     : cover;
-    background-size        : cover;
+	width: inherit;
+	margin: 0;
+}
 
-  }
+.social {
+  text-align: center;
+  background-color: rgba(255,255,255,0.5);
+  font-size: 5rem;
+  position: absolute;
+  bottom: 10vh;
+  text-align: center;
+  width: 100%;
+  height: 7.5rem;
+  color: #333;
+}
 
-  .social {
-  	text-align      : center;
-	background-color: rgba(255,255,255,0.5);
-  	font-size       : 1.2rem;
-	position        : absolute;
-  	bottom          : 50vh;
-  	text-align: center;
-  }
+.social i {
+	margin-left: 1rem;
+	margin-right: 1rem;
+}
+.social a:hover {
+  color: rgba(245,0,87, 0.8);
+}
+
+.video-promo {
+	  margin-top: 5rem;
+	 margin-bottom: 5rem;
+  text-align: center;
+}
+
+.contact {
+  height: 80vh;
+  margin-bottom: 5rem;
+  background: url(img/loverboys-white.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.contact .info {
+	
+  width: 600px;
+  background-color: rgba(255,255,255,0.8);
+  font-family: "Courier New";
+  color: #666;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+  padding-left: 3rem;
+  position: absolute;
+  margin-top: 25%;
+  margin-left: 10%;
+  box-shadow: 0 0 1px 2px rgba(255,255,255,0.7)
+}
+
+.contact .info h1 {
+font-size: 3rem;
+color: #333;
+}
+
+.contact .info a:hover {
+color: #333;
+}
+
+
+.banner {
+	height: 60vh;
+	background: url(img/loverboys-neon-band.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.spacer {
+  height: 5vh;
+}
+
+.ruler {
+  width: 100%;
+  height: 5px;
+  background-color: rgba(245,0,87, 0.8);
+  position: fixed;
+  bottom: 0;
+}
